// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emotion/babel babel css css basic 1`] = `
"
css(\\"css-cu78iu\\", [widthVar], function createEmotionRules(x0) {
        return [\`.css-cu78iu { margin: 12px 48px;
        color: #ffffff;
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        -webkit-flex: 1 0 auto;
        -ms-flex: 1 0 auto;
        flex: 1 0 auto;
        color: blue;
        width: \${x0}; }\`];
});"
`;

exports[`emotion/babel babel css css kitchen sink 1`] = `
"
const cls = css(\\"css-cls-h5t3cu\\", [margin], function createEmotionRules(x0) {
        return [\`.css-cls-h5t3cu { font-size: 58pt;margin: \${x0}; }\`];
});
const frag = fragment(\\"frag-frag-zzm2ov\\", [], function createEmotionFragment() {
        return [\`.frag-frag-zzm2ov { padding: 8px; }\`];
});
const fragB = fragment(\\"frag-fragB-16v04hq\\", [heightVar, frag], function createEmotionFragment(x0, x1) {
        return [\`.frag-fragB-16v04hq { height: \${x0};\${x1}; }\`];
});
const cls2 = css(\\"css-cls2-1b4c3x0\\", [frag, fragB], function createEmotionRules(x0, x1) {
        return [\`.css-cls2-1b4c3x0 { \${x0};
        \${x1};
        margin: 12px 48px;
        color: #ffffff; }\`];
});"
`;

exports[`emotion/babel babel css extract css basic 1`] = `
"import \\"./babel.test.emotion.css\\";

css(\\"css-cu78iu\\", [widthVar], function createEmotionRules(x0) {
        return [\`.css-cu78iu {
        width: \${x0}; }\`];
});"
`;

exports[`emotion/babel babel css extract css basic 2`] = `
".css-cu78iu {
    margin: 12px 48px;
    color: #ffffff;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex: 1 0 auto;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
    color: blue
}"
`;

exports[`emotion/babel babel css extract css kitchen sink 1`] = `
"import \\"./babel.test.emotion.css\\";

const cls = css(\\"css-cls-h5t3cu\\", [margin], function createEmotionRules(x0) {
        return [\`.css-cls-h5t3cu {margin: \${x0}; }\`];
});
const frag = fragment(\\"frag-frag-zzm2ov\\", [], function createEmotionFragment() {
        return [\`.frag-frag-zzm2ov { padding: 8px; }\`];
});
const fragB = fragment(\\"frag-fragB-16v04hq\\", [heightVar, frag], function createEmotionFragment(x0, x1) {
        return [\`.frag-fragB-16v04hq { height: \${x0};\${x1}; }\`];
});
const cls2 = css(\\"css-cls2-1b4c3x0\\", [frag, fragB], function createEmotionRules(x0, x1) {
        return [\`.css-cls2-1b4c3x0 { \${x0};
        \${x1}; }\`];
});"
`;

exports[`emotion/babel babel css extract css kitchen sink 2`] = `
".css-cls-h5t3cu {
    font-size: 58pt
}
.css-cls2-1b4c3x0 {
    margin: 12px 48px;
    color: #ffffff
}"
`;

exports[`emotion/babel babel font-face font-face basic 1`] = `
"
fontFace(\\"font-face-1o0czbr\\", [], function createEmotionFontFace() {
     return [\\"@font-face {font-family: MyHelvetica;\\\\n          src: local(\\\\\\"Helvetica Neue Bold\\\\\\"),\\\\n               local(\\\\\\"HelveticaNeue-Bold\\\\\\"),\\\\n               url(MgOpenModernaBold.ttf);\\\\n          font-weight: bold;}\\"];
});"
`;

exports[`emotion/babel babel fragment basic fragment 1`] = `
"
const frag = fragment(\\"frag-frag-upmkpf\\", [], function createEmotionFragment() {
        return [\`.frag-frag-upmkpf { color: green }\`];
});
styled(\\"h1\\", \\"css-u3lc8x\\", [frag], function createEmotionStyledRules(x0) {
        return [\`.css-u3lc8x { font-size: 20px; \${x0}; }\`];
});"
`;

exports[`emotion/babel babel fragment fragment kitchen sink 1`] = `
"
const frag = fragment('frag-frag-10oh1gr', [backgroundColor], function createEmotionFragment(x0) {
        return [\`.frag-frag-10oh1gr { color: green; background-color: \${x0} }\`];
});
const frag1 = fragment('frag-some-frag-name-1ymjbmm', [], function createEmotionFragment() {
        return [\`.frag-some-frag-name-1ymjbmm { width: 20px; }\`];
});
const frag2 = fragment('frag-frag2-q1t5oy', [frag1], function createEmotionFragment(x0) {
        return [\`.frag-frag2-q1t5oy { height: 20px; \${x0}; }\`];
});
styled('h1', 'css-some-name-9k8moo', [fontSize + 'px', frag, frag2], function createEmotionStyledRules(x0, x1, x2) {
        return [\`.css-some-name-9k8moo { font-size: \${x0}; \${x1}; \${x2} }\`];
});"
`;

exports[`emotion/babel babel keyframes keyframe basic 1`] = `
"
const rotate360 = keyframes(\\"animation-rotate360-f35ahc\\", [], function createEmotionKeyframe() {
  return [\\"from {\\\\n    -webkit-transform: rotate(0deg);\\\\n    -ms-transform: rotate(0deg);\\\\n    transform: rotate(0deg);\\\\n} to {\\\\n    -webkit-transform: rotate(360deg);\\\\n    -ms-transform: rotate(360deg);\\\\n    transform: rotate(360deg);\\\\n}\\"];
});"
`;

exports[`emotion/babel babel styled component attr 1`] = `
"styled('input', 'css-14vghnb', [function getMargin(props) {
       return props.margin;
}, props => props.height * props.scale, function getWidth(props) {
       return props.width;
}, flex], function createEmotionStyledRules(x0, x1, x2, x3) {
       return [\`.css-14vghnb { margin: \${x0};
       color: #ffffff;
       height: \${x1};
       width: \${x2};
       color: blue;
       display: \${x3}; }\`];
});"
`;

exports[`emotion/babel babel styled component attr kitchen sink 1`] = `
"styled('input', 'css-1lqib20', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}, function getWidth(props) {
        return props.width ? props.width : ('95' + '%');
}, function getHeight(props) {
        return props.height ? props.height : ('90' + 'vw');
}, function getDisplay(props) {
        return props.display ? props.display : ('flex' + '');
}], function createEmotionStyledRules(x0, x1, x2, x3, x4) {
        return [\`.css-1lqib20 { margin: \${x0};
        padding: \${x1};
        font-size: attr(fontSize ch, 8);
        width: \${x2};
        height: \${x3};
        display: \${x4}; }\`];
});"
`;

exports[`emotion/babel babel styled component attr with default value 1`] = `
"styled('input', 'css-1luxokk', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + '');
}], function createEmotionStyledRules(x0) {
        return [\`.css-1luxokk { margin: \${x0}; }\`];
});"
`;

exports[`emotion/babel babel styled component attr with value type 1`] = `
"styled('input', 'css-1luxokk', [function getMargin(props) {
        return props.margin + 'px';
}], function createEmotionStyledRules(x0) {
        return [\`.css-1luxokk { margin: \${x0}; }\`];
});"
`;

exports[`emotion/babel babel styled component attr with value type and default value 1`] = `
"styled('input', 'css-1luxokk', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}], function createEmotionStyledRules(x0) {
        return [\`.css-1luxokk { margin: \${x0}; }\`];
});"
`;

exports[`emotion/babel babel styled component basic 1`] = `
"const H1 = styled('h1', 'css-H1-1t8i2zo', [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [\`.css-H1-1t8i2zo { font-size: \${x0}; }\`];
});"
`;

exports[`emotion/babel babel styled component extract based on props 1`] = `
"import './babel.test.emotion.css';
const H1 = styled('h1', 'css-H1-q3ohdq', [fontSize + 'px', props => props.translateX], function createEmotionStyledRules(x0, x1) {
  return [\`.css-H1-q3ohdq { font-size: \${x0} }\`];
});"
`;

exports[`emotion/babel babel styled component extract based on props 2`] = `
".css-H1-q3ohdq {
    height: 20px;
    -webkit-transform: translateX(var(--css-H1-q3ohdq-1));
    -ms-transform: translateX(var(--css-H1-q3ohdq-1));
    transform: translateX(var(--css-H1-q3ohdq-1))
}"
`;

exports[`emotion/babel babel styled component extract basic 1`] = `
"import './babel.test.emotion.css';
const H1 = styled('h1', 'css-H1-1mh2el5', [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [\`.css-H1-1mh2el5 { font-size: \${x0} }\`];
});"
`;

exports[`emotion/babel babel styled component extract basic 2`] = `
".css-H1-1mh2el5 {
    height: 20px
}"
`;

exports[`emotion/babel babel styled component extract no dynamic 1`] = `
"import \\"./babel.test.emotion.css\\";
styled(\\"h1\\", \\"css-14ksm7b\\", [], function createEmotionStyledRules() {
  return [];
});"
`;

exports[`emotion/babel babel styled component extract no dynamic 2`] = `
".css-14ksm7b {
    color: blue
}"
`;

exports[`emotion/babel babel styled component extract no use 1`] = `"\\"h1\\";"`;

exports[`emotion/babel babel styled component function call 1`] = `
"styled(MyComponent, 'css-1t8i2zo', [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [\`.css-1t8i2zo { font-size: \${x0}; }\`];
});"
`;

exports[`emotion/babel babel styled component match works on multiple 1`] = `
"styled('input', 'css-1j6h68f', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}], function createEmotionStyledRules(x0, x1) {
        return [\`.css-1j6h68f { margin: \${x0};
        color: blue;
        padding: \${x1}; }\`];
});"
`;

exports[`emotion/babel babel styled component name is correct with no identifier 1`] = `
"
css(\\"css-1cppx8p\\", [], function createEmotionRules() {
        return [\`.css-1cppx8p { margin: 12px 48px;
        color: #ffffff; }\`];
});"
`;

exports[`emotion/babel babel styled component no dynamic 1`] = `
"styled(\\"h1\\", \\"css-14ksm7b\\", [], function createEmotionStyledRules() {
  return [\`.css-14ksm7b { color: blue; }\`];
});"
`;

exports[`emotion/babel babel styled component no use 1`] = `"\\"h1\\";"`;
